Open package to avoid warning during jdisc_core compile.